[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Effects/GhostHandler.gd" type="Script" id=1]

[node name="GhostHandler" type="Node2D"]
self_modulate = Color( 1.2, 1.8, 2.2, 0.39 )
script = ExtResource( 1 )

[node name="Ghost_Tick_Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Ghost_Timer" type="Timer" parent="."]

[connection signal="timeout" from="Ghost_Tick_Timer" to="." method="_on_Ghost_Tick_Timer_timeout"]
[connection signal="timeout" from="Ghost_Timer" to="." method="_on_Ghost_Timer_timeout"]
